<resources>

    <!-- keys for counter values -->
    <string name="p1_life">p1life</string>
    <string name="p1_box_1">p1box1</string>
    <string name="p1_box_2">p1box2</string>
    <string name="p1_box_3">p1box3</string>

    <string name="p2_life">p2life</string>
    <string name="p2_box_1">p2box1</string>
    <string name="p2_box_2">p2box2</string>
    <string name="p2_box_3">p2box3</string>

    <string name="p3_life">p3life</string>
    <string name="p3_box_1">p3box1</string>
    <string name="p3_box_2">p3box2</string>
    <string name="p3_box_3">p3box3</string>

    <string name="p4_life">p4life</string>
    <string name="p4_box_1">p4box1</string>
    <string name="p4_box_2">p4box2</string>
    <string name="p4_box_3">p4box3</string>

    <!-- preference keys -->
    <string name="pref_search_history">searchHistory</string>
    <string name="pref_number_of_players">numberOfPlayers</string>
    <string name="pref_starting_life_total">startingLifeTotal</string>
    <string name="pref_keep_screen_on">keepScreenOn</string>
    <string name="pref_reroll_if_tie">reRollIfTie</string>
    <string name="pref_light_mode">lightMode</string>

    <string name="app_name">Manadork</string>
    <string name="counter">Counter</string>
    <string name="library">Library</string>
    <string name="dice">Dice</string>
    <string name="back">Back</string>
    <string name="roll">Roll</string>
    <string name="refresh">Refresh</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="slash">\u0020/\u0020</string>
    <string name="enter_card_name_here">Enter card name here…</string>
    <string name="dice_1">1</string>
    <string name="dice_2">2</string>
    <string name="dice_3">3</string>
    <string name="dice_4">4</string>
    <string name="dice_5">5</string>
    <string name="dice_6">6</string>
    <string name="player_one_total">Player one total</string>
    <string name="player_two_total">Player two total</string>
    <string name="card_image_is_loading">Card image is loading!</string>
    <string name="click_to_roll">Shake or click to roll →</string>
    <string name="zero">0</string>
    <string name="_500_error">500 error</string>
    <string name="loyalty">Loyalty:\u0020</string>
    <string name="plus_5">+5</string>
    <string name="minus_5">-5</string>
    <string name="dash">\u0020—\u0020</string>
    <string name="dice_7">7</string>
    <string name="dice_8">8</string>
    <string name="dice_10">10</string>
    <string name="dice_9">9</string>
    <string name="heads_background">Heads background</string>
    <string name="heads_image">Heads image</string>
    <string name="tails_background">Tails background</string>
    <string name="tails_image">Tails image</string>
    <string name="flip">Flip</string>
    <string name="settings">Settings</string>
    <string name="let_me_know"><u>Let me know.</u></string>
    <string name="settings_label_library">Library</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="settings_label_counter">Counter</string>
    <string name="settings_label_dice">Dice</string>
    <string name="settings_label_general">General</string>
    <string name="have_a_suggestion">Have a suggestion?\u0020</string>
    <string name="reroll_if_tie">Reroll if tie</string>
    <string name="light_mode">Light mode</string>
    <string name="starting_life_total_label">Starting life total</string>
    <string name="enter_life_total_here">Enter life total here…</string>
    <string name="number_of_players">Number of players</string>
    <string name="number_of_players_1">1</string>
    <string name="number_of_players_2">2</string>
    <string name="number_of_players_3">3</string>
    <string name="number_of_players_4">4</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="suggestions_name">Name</string>
    <string name="suggestions_email">Email</string>
    <string name="suggestions_comments">Comments</string>
    <string name="suggestions_submit">Submit</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="suggestions_subject">Subject</string>
    <string name="trade">Trade</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear search</string>

</resources>