<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_number_of_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_of_players"
        android:textColor="@color/primary_white"
        android:textSize="@dimen/text_generic_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rg_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tv_number_of_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_number_of_players"
        app:layout_constraintTop_toTopOf="@id/tv_number_of_players">

        <RadioButton
            android:id="@+id/rb_players_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/number_of_players_1"
            android:textColor="@drawable/settings_number_selector"
            android:textSize="@dimen/text_generic_size_normal" />

        <RadioButton
            android:id="@+id/rb_players_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/number_of_players_2"
            android:textColor="@drawable/settings_number_selector"
            android:textSize="@dimen/text_generic_size_normal" />

        <RadioButton
            android:id="@+id/rb_players_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/number_of_players_4"
            android:textColor="@drawable/settings_number_selector"
            android:textSize="@dimen/text_generic_size_normal" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>