<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.alexschutz.scrybary.view.counter.PlayerContainer
        android:id="@+id/p1_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/p3_container"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_line" />

    <com.alexschutz.scrybary.view.counter.PlayerContainer
        android:id="@+id/p2_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@id/divider_line"
        app:layout_constraintEnd_toStartOf="@id/p4_container"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.alexschutz.scrybary.view.counter.PlayerContainer
        android:id="@+id/p3_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toEndOf="@id/p1_container"
        app:layout_constraintTop_toBottomOf="@id/divider_line" />

    <com.alexschutz.scrybary.view.counter.PlayerContainer
        android:id="@+id/p4_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@id/divider_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="50"
        app:layout_constraintStart_toEndOf="@id/p2_container"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dimmed_grey"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/vertical_divider_line"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/dimmed_grey"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_back_flip_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/counter_button_circle"
            android:contentDescription="@string/back"
            android:onClick="@{backListener::onBackPressed}"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageButton
            android:id="@+id/btn_flip"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/counter_button_circle"
            android:contentDescription="@string/flip"
            android:onClick="@{flipListener::onFlipClicked}"
            app:srcCompat="@drawable/ic_coin" />

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/counter_button_circle"
            android:contentDescription="@string/refresh"
            app:srcCompat="@drawable/ic_refresh" />

    </LinearLayout>

    <include
        android:id="@+id/layout_coin"
        layout="@layout/coin_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>